--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,17 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "boto3>=1.39.11",
     "dotenv>=0.9.9",
     "jupyter>=1.1.1",
+    "langchain-huggingface>=0.3.0",
     "mlflow>=3.1.1",
     "numpy>=2.3.1",
+    "ollama>=0.5.1",
     "openai>=1.93.0",
     "pandas>=2.3.0",
-    "requests-ratelimiter>=0.7.0",
+    "pyarrow>=20.0.0",
+    "pylint>=3.3.7",
     "scikit-learn>=1.7.0",
-    "tiktoken>=0.9.0",
-    "tqdm>=4.67.1",
+    "sentence-transformers>=5.0.0",
 ]
