--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,7 @@ repos:
     rev: 22.10.0
     hooks:
     -   id: black
+        args: [--quiet]
         files: ^(src/|tests/|dags/)
 
 -   repo: local
