--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,314 @@
-sentence-transformers
-pandas
-boto3
-dotenv
-langchain-huggingface
-mlflow
-numpy
-ollama
-openai
-pyarrow
-requests
-scikit-learn
-apache-airflow-task-sdk
-pylint
-black
-pytest
-pre-commit
-faiss-cpu
-rank_bm25
-spacy
-nltk
+a2wsgi==1.10.10
+aiosqlite==0.21.0
+alembic==1.16.4
+annotated-types==0.7.0
+anyio==4.9.0
+apache-airflow==3.0.3
+apache-airflow-core==3.0.3
+apache-airflow-providers-common-compat==1.7.2
+apache-airflow-providers-common-io==1.6.1
+apache-airflow-providers-common-sql==1.27.3
+apache-airflow-providers-smtp==2.1.1
+apache-airflow-providers-standard==1.4.1
+apache-airflow-task-sdk==1.0.3
+argcomplete==3.6.2
+argon2-cffi==25.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asgiref==3.9.1
+astroid==3.3.11
+asttokens==3.0.0
+async-lru==2.0.5
+attrs==25.3.0
+babel==2.17.0
+beautifulsoup4==4.13.4
+black==25.1.0
+bleach==6.2.0
+blinker==1.9.0
+blis==1.3.0
+boto3==1.39.11
+botocore==1.39.11
+cachelib==0.13.0
+cachetools==5.5.2
+cadwyn==5.4.4
+catalogue==2.0.10
+certifi==2025.6.15
+cffi==1.17.1
+cfgv==3.4.0
+charset-normalizer==3.4.2
+click==8.2.1
+cloudpathlib==0.21.1
+cloudpickle==3.1.1
+colorlog==6.9.0
+comm==0.2.2
+confection==0.1.5
+contourpy==1.3.2
+cron-descriptor==1.4.5
+croniter==6.0.0
+cryptography==45.0.5
+cycler==0.12.1
+cymem==2.0.11
+databricks-sdk==0.59.0
+debugpy==1.8.14
+decorator==5.2.1
+defusedxml==0.7.1
+deprecated==1.2.18
+dill==0.4.0
+distlib==0.4.0
+distro==1.9.0
+dnspython==2.7.0
+docker==7.1.0
+dotenv==0.9.9
+email-validator==2.2.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
+executing==2.2.0
+faiss-cpu==1.11.0.post1
+fastapi==0.116.1
+fastapi-cli==0.0.8
+fastapi-cloud-cli==0.1.4
+fastjsonschema==2.21.1
+filelock==3.18.0
+flask==3.1.1
+flask-session==0.8.0
+fonttools==4.59.0
+fqdn==1.5.1
+fsspec==2025.7.0
+gitdb==4.0.12
+gitpython==3.1.44
+google-auth==2.40.3
+googleapis-common-protos==1.70.0
+graphene==3.4.3
+graphql-core==3.2.6
+graphql-relay==3.2.0
+greenlet==3.2.3
+grpcio==1.74.0
+gunicorn==23.0.0
+h11==0.16.0
+hf-xet==1.1.5
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.33.4
+identify==2.6.12
+idna==3.10
+importlib-metadata==8.7.0
+iniconfig==2.1.0
+ipykernel==6.29.5
+ipython==9.4.0
+ipython-pygments-lexers==1.1.1
+ipywidgets==8.1.7
+isoduration==20.11.0
+isort==6.0.1
+itsdangerous==2.2.0
+jedi==0.19.2
+jinja2==3.1.6
+jiter==0.10.0
+jmespath==1.0.1
+joblib==1.5.1
+json5==0.12.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+jupyter==1.1.1
+jupyter-client==8.6.3
+jupyter-console==6.6.3
+jupyter-core==5.8.1
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter-server==2.16.0
+jupyter-server-terminals==0.5.3
+jupyterlab==4.4.4
+jupyterlab-pygments==0.3.0
+jupyterlab-server==2.27.3
+jupyterlab-widgets==3.0.15
+kiwisolver==1.4.8
+kneed==0.8.5
+langchain-core==0.3.70
+langchain-huggingface==0.3.0
+langcodes==3.5.0
+langsmith==0.4.8
+language-data==1.3.0
+lazy-object-proxy==1.11.0
+libcst==1.8.2
+linkify-it-py==2.0.3
+lockfile==0.12.2
+mako==1.3.10
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+markupsafe==3.0.2
+matplotlib==3.10.3
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mdurl==0.1.2
+methodtools==0.4.7
+mistune==3.1.3
+mlflow==3.1.1
+mlflow-skinny==3.1.1
+more-itertools==10.7.0
+mpmath==1.3.0
+msgspec==0.19.0
+murmurhash==1.0.13
+mypy-extensions==1.1.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.5
+nltk==3.9.1
+nodeenv==1.9.1
+notebook==7.4.4
+notebook-shim==0.2.4
+numpy==2.3.1
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+ollama==0.5.1
+openai==1.93.0
+opentelemetry-api==1.35.0
+opentelemetry-exporter-otlp==1.35.0
+opentelemetry-exporter-otlp-proto-common==1.35.0
+opentelemetry-exporter-otlp-proto-grpc==1.35.0
+opentelemetry-exporter-otlp-proto-http==1.35.0
+opentelemetry-proto==1.35.0
+opentelemetry-sdk==1.35.0
+opentelemetry-semantic-conventions==0.56b0
+orjson==3.11.0
+overrides==7.7.0
+packaging==25.0
+pandas==2.3.0
+pandocfilters==1.5.1
+parso==0.8.4
+pathspec==0.12.1
+pendulum==3.1.0
+pexpect==4.9.0
+pillow==11.3.0
+pip==25.1.1
+platformdirs==4.3.8
+pluggy==1.6.0
+pre-commit==4.2.0
+preshed==3.0.10
+prometheus-client==0.22.1
+prompt-toolkit==3.0.51
+protobuf==6.31.1
+psutil==7.0.0
+ptyprocess==0.7.0
+pure-eval==0.2.3
+pyarrow==20.0.0
+pyasn1==0.6.1
+pyasn1-modules==0.4.2
+pycparser==2.22
+pydantic==2.11.7
+pydantic-core==2.33.2
+pygments==2.19.2
+pyjwt==2.10.1
+pylint==3.3.7
+pyparsing==3.2.3
+pytest==8.4.1
+python-daemon==3.1.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-json-logger==3.3.0
+python-multipart==0.0.20
+python-slugify==8.0.4
+pytz==2025.2
+pyyaml==6.0.2
+pyzmq==27.0.0
+rank-bm25==0.2.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.4
+requests-toolbelt==1.0.0
+retryhttp==1.3.3
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==14.1.0
+rich-argparse==1.7.1
+rich-toolkit==0.14.8
+rignore==0.6.4
+rpds-py==0.26.0
+rsa==4.9.1
+s3transfer==0.13.1
+safetensors==0.5.3
+scikit-learn==1.7.0
+scipy==1.16.0
+send2trash==1.8.3
+sentence-transformers==5.0.0
+sentry-sdk==2.33.2
+setproctitle==1.3.6
+setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.3.0.post1
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.7
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+sqlalchemy==1.4.54
+sqlalchemy-jsonfield==1.0.2
+sqlalchemy-utils==0.41.2
+sqlparse==0.5.3
+srsly==2.5.1
+stack-data==0.6.3
+starlette==0.47.1
+structlog==25.4.0
+svcs==25.1.0
+sympy==1.14.0
+tabulate==0.9.0
+tenacity==9.1.2
+termcolor==3.1.0
+terminado==0.18.1
+text-unidecode==1.3
+thinc==8.3.6
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+tokenizers==0.21.2
+tomlkit==0.13.3
+torch==2.7.1
+tornado==6.5.1
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.53.2
+triton==3.3.1
+typer==0.16.0
+types-python-dateutil==2.9.0.20250516
+types-requests==2.32.4.20250611
+typing-extensions==4.14.1
+typing-inspection==0.4.1
+tzdata==2025.2
+uc-micro-py==1.0.3
+universal-pathlib==0.2.6
+uri-template==1.3.0
+urllib3==2.5.0
+uuid6==2025.0.1
+uvicorn==0.35.0
+uvloop==0.21.0
+virtualenv==20.32.0
+wasabi==1.1.3
+watchfiles==1.1.0
+wcwidth==0.2.13
+weasel==0.4.1
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+werkzeug==3.1.3
+wheel==0.45.1
+widgetsnbextension==4.0.14
+wirerope==1.0.0
+wrapt==1.17.2
+zipp==3.23.0
+zstandard==0.23.0
